--- a/env/requirements-tf211.txt
+++ b/env/requirements-tf211.txt
@@ -1,10 +1,10 @@
 tensorflow==2.11.0
 
-numpy
-scipy
-pandas
-matplotlib
-pyyaml
-scikit-learn
+numpy==1.24.1
+scipy==1.11.1
+pandas==2.0.3
+matplotlib==3.7.2
+pyyaml==6.0
+scikit-learn==1.3.0
 
-adversarial-robustness-toolbox
+adversarial-robustness-toolbox==1.20.1
