--- a/env/requirements-torch291-cu128.txt
+++ b/env/requirements-torch291-cu128.txt
@@ -1,15 +1,11 @@
 torch==2.9.1+cu128
 torchvision==0.24.1+cu128
 
-robustbench
-autoattack
-foolbox
+foolbox == 3.3.4
 
-numpy
-scipy
-scikit-learn
-matplotlib
-
-requests
-pyyaml
-pandas
+numpy==1.24.1
+scipy==1.11.1
+pandas==2.0.3
+matplotlib==3.7.2
+pyyaml==6.0
+scikit-learn==1.3.0
